--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
-        "vue-spinner": "^1.0.4",
+        "vue-strap": "^1.1.40",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
